@@ -30,7 +30,8 @@ DISTCLEANFILES += $(template_generated_FILE)
 server_example_in_FILE = \
 		amanda.conf.in \
 		inetd.conf.amandaserver.in \
-		xinetd.amandaserver.in
+		xinetd.amandaserver.in \
+		amandaserver-tcp.xml.in
 server_example_FILE = \
 		chg-multi.conf \
 		chg-scsi.conf \
@@ -44,7 +45,8 @@ client_example_in_FILE = \
 		amanda-client.conf.in \
 		amanda-client-postgresql.conf.in \
 		inetd.conf.amandaclient.in \
-		xinetd.amandaclient.in
+		xinetd.amandaclient.in \
+		amandaclient-tcp.xml.in
 client_example_FILE = 
 client_example_generated_FILE = $(client_example_in_FILE:%.in=%)
 client_example_DATA = $(client_example_FILE) $(client_example_generated_FILE)
